# euroet

./: .dockerignore  .gitignore  Makefile  README.md  config  docker-compose.override.build.yml  docker-compose.override.pull.yml  docker-compose.prod.yml  pyproject.toml  setup.cfg
back/: '  Makefile  pyproject.toml  setup.cfg
back/config/: .env.template
back/server/: urls.py  views.py
back/server/lib/: deactivate_model_mixin.py  enum.py  factory_seed.py  queue_sync_middleware.py  sql_debug_middleware.py
back/server/pm/: permissions.py  tasks.py  urls.py
back/server/pm/admin/: __init__.py  collection.py  component.py  component_import.py  group.py  manufacturer.py  product.py  project.py  report.py
back/server/pm/factories/: __init__.py  collection.py  component.py  entry.py  group.py  manufacturer.py  product.py  product_component.py  project.py  project_access.py
back/server/pm/logic/: component.py  component_import.py  copy.py  report.py
back/server/pm/migrations/: 0001_initial.py  0002_auto_20190302_0650.py  0002_auto_20190307_0749.py  0002_auto_20190308_2225.py  0002_auto_20190310_1039.py  0002_auto_20190322_2319.py  0002_trigram_index.py  0003_auto_20190310_2109.py  0003_componentimport.py  0003_trigram_index.py  0004_auto_20200217_2001.py  0004_project_modified_at.py  0005_auto_20200603_1035.py  0005_product_deleted_at.py  0006_component_description_index.py  0007_auto_20190418_0917.py  0008_auto_20190418_1737.py
back/server/pm/models/: __init__.py  collection.py  component.py  component_base.py  component_import.py  entry.py  group.py  manufacturer.py  product.py  product_component.py  project.py  (+2 more)
back/server/settings/: __init__.py
back/server/users/: admin.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
back/tests/: conftest.py
back/tests/test_api/: test_product.py  test_product_component.py  test_project.py
back/tests/test_logic/: test_import.py
(+174 files in other folders)
